tests/ui/resolve/base_ctor_args.stderr
error: contract makes multiple calls to base constructor C
  --> ROOT/tests/ui/resolve/base_ctor_args.sol:LL:CC
   |
LL | contract F is E {
   |          ^
   |

note: first call here
  --> ROOT/tests/ui/resolve/base_ctor_args.sol:LL:CC
   |
LL |     constructor() C(2) {} 
   |                   -
   |

note: second call here
  --> ROOT/tests/ui/resolve/base_ctor_args.sol:LL:CC
   |
LL |     constructor() C(5) {}
   |                   -
   |

error: contract makes multiple calls to base constructor C
  --> ROOT/tests/ui/resolve/base_ctor_args.sol:LL:CC
   |
LL | contract G is F {}
   |          ^
   |

note: first call here
  --> ROOT/tests/ui/resolve/base_ctor_args.sol:LL:CC
   |
LL |     constructor() C(2) {} 
   |                   -
   |

note: second call here
  --> ROOT/tests/ui/resolve/base_ctor_args.sol:LL:CC
   |
LL |     constructor() C(5) {}
   |                   -
   |

error: aborting due to 2 previous errors

